force-app/main/default/objects/pstar__Patient_Admission__c/pstar__Patient_Admission__c.object-meta.xml
<CustomObject>
    <label>Patient Admission</label>
    <nameField>
        <label>Patient Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>