force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Available_Times_am_pm__c.field-meta.xml
<CustomField>
    <fullName>pstar__Available_Times_am_pm__c</fullName>
    <label>Available Times (am, pm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>