force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_address1__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_address1__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>