force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_address2__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_address2__c</fullName>
    <label>Credible Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>