force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Agrees_to_staff_w_Crim_Hx__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Agrees_to_staff_w_Crim_Hx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrees to staff w/Crim Hx</label>
    <type>Checkbox</type>
</CustomField>