force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Are_there_pets_in_home__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Are_there_pets_in_home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are there pets in home?</label>
    <type>Checkbox</type>
</CustomField>