force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Assigned_Sex_At_Birth__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Assigned_Sex_At_Birth__c</fullName>
    <label>Credible Assigned Sex At Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>