force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Client_Signature_Source__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Client_Signature_Source__c</fullName>
    <label>Credible Client Signature Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>