force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Diagnosis_Intake__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Diagnosis_Intake__c</fullName>
    <label>Credible Diagnosis Intake</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>