force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_DOB__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>