force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Email__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Email__c</fullName>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>