force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_How_did_you_hear_of_us__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_How_did_you_hear_of_us__c</fullName>
    <label>Credible How did you hear of us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>