force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Hx_of_pet_aggression__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Hx_of_pet_aggression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Hx of pet aggression</label>
    <type>Checkbox</type>
</CustomField>