force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_ID__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_ID__c</fullName>
    <externalId>true</externalId>
    <label>Credible Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>