force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_IDD__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_IDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible IDD</label>
    <type>Checkbox</type>
</CustomField>