force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Is_There_a_Hx_of_DA_Use__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Is_There_a_Hx_of_DA_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Is There a Hx of D&amp;A Use?</label>
    <type>Checkbox</type>
</CustomField>