force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Last_Psych_Eval__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Last_Psych_Eval__c</fullName>
    <label>Credible Last Psych Eval</label>
    <type>Date</type>
</CustomField>