force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Legal_Involve_in_Past_Yr__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Legal_Involve_in_Past_Yr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Legal Involve in Past Yr?</label>
    <type>Checkbox</type>
</CustomField>