force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_MAID__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_MAID__c</fullName>
    <label>Credible MAID#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>