force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_May_we_call_as_Peerstar__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_May_we_call_as_Peerstar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible May we call as Peerstar?</label>
    <type>Checkbox</type>
</CustomField>