force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Megan_s_Law__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Megan_s_Law__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Megan's Law</label>
    <type>Checkbox</type>
</CustomField>