force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Middle_Initial__c</fullName>
    <label>Credible Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>