force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>