force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Need_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Need_Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Interpreter?</label>
    <type>Checkbox</type>
</CustomField>