force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_No_Admit_Reason__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_No_Admit_Reason__c</fullName>
    <label>Credible No Admit Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>