force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Patient_Last_Name__c</fullName>
    <label>Patient Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>