force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>