force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Primary_Care_Physician__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Primary_Care_Physician__c</fullName>
    <label>Credible Primary Care Physician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>