force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Reason_Seeking_Services__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Reason_Seeking_Services__c</fullName>
    <label>Credible Reason Seeking Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>