force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Referral_Date__c</fullName>
    <label>Credible Referral Date</label>
    <type>Date</type>
</CustomField>