force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Referral_Phone__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Referral_Phone__c</fullName>
    <label>Credible Referral Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>