force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Referring_NPI__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Referring_NPI__c</fullName>
    <label>Credible Referring NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>