force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Referring_Provider__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Referring_Provider__c</fullName>
    <label>Credible Referring Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>