force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Release_Of_Information__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Release_Of_Information__c</fullName>
    <label>Credible Release Of Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>