force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Status_Reason__c</fullName>
    <label>Credible Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>