force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Credible_Web_Referral__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Web_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Web Referral</label>
    <type>Checkbox</type>
</CustomField>