force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>pstar__Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>Date</type>
</CustomField>