force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Gender__c.field-meta.xml
<CustomField>
    <fullName>pstar__Gender__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>