force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Referral__c.field-meta.xml
<CustomField>
    <fullName>pstar__Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Patient Admissions</relationshipLabel>
    <relationshipName>Patient_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>