force-app/main/default/objects/pstar__Patient_Admission__c/fields/pstar__Source__c.field-meta.xml
<CustomField>
    <fullName>pstar__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>pstar__Source__c</referenceTo>
    <relationshipLabel>Patient Admissions</relationshipLabel>
    <relationshipName>Patient_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>